--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "express": "^5.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "ytdl-core-discord": "^1.3.1"
+  },
+  "engines":{ 
+    "node": "18.X" 
   }
 }
