--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,21 @@
+# ===================================================
+#        Render Blueprint for Node.js Web Service
+# ===================================================
+
 services:
+  # A public web service
   - type: web
-    name: youtube-downloader
+    name: youtube-downloader-app
+    # Environment to use
     env: node
+    # Instance type
     plan: free
+    # Region to deploy in
+    region: singapore
+    # Build and start commands
     buildCommand: "npm install"
     startCommand: "npm start"
-    build:
-      preDeployCommand: "apt-get update && apt-get install -y ffmpeg"
+    # Pre-deploy command to install FFmpeg
+    preDeployCommand: "apt-get update && apt-get install -y ffmpeg"
+    # Health check path
+    healthCheckPath: /
