--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "description": "",
   "dependencies": {
     "@distube/ytdl-core": "^4.16.12",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "body-parser": "^2.2.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "ytdl-core-discord": "^1.3.1"
   },
-  "engines":{ 
-    "node": "18.X" 
+  "engines": {
+    "node": "18.X"
   }
 }
