--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@distube/ytdl-core": "^4.16.12",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "body-parser": "^2.2.0",
+    "dotenv": "^17.2.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "fluent-ffmpeg": "^2.1.3",
+    "https-proxy-agent": "^7.0.6",
     "ytdl-core-discord": "^1.3.1"
   },
   "engines": {
